WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274237
[UnifiedPDF] Form control repaints are incorrect when PDF content changes across multiple tiles
https://bugs.webkit.org/show_bug.cgi?id=274237
Summary
[UnifiedPDF] Form control repaints are incorrect when PDF content changes acr...
Abrar Rahman Protyasha
Reported
2024-05-15 19:05:02 PDT
rdar://128072857
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2024-05-15 19:16:39 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28637
EWS
Comment 2
2024-05-16 11:45:14 PDT
Committed
278878@main
(8de0ecb948d5): <
https://commits.webkit.org/278878@main
> Reviewed commits have been landed. Closing PR #28637 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug